--- a/src/main/transformations/dev_sb_asia_prod/token.properties
+++ b/src/main/transformations/dev_sb_asia_prod/token.properties
@@ -1,33 +1,33 @@
 WORKFLOW_INTEGRATION_USER=arun.iyer.ntt@mbj.daimler-apac.com
 
-OBJECT_LEAD_ID=/a0v/e
-OBJECT_LEAD_SALES_RECORD_TYPE_ID=012p00000008VGN
-OBJECT_LEAD_FIRSTNAME_ID=00Np0000000Kd5x
-OBJECT_LEAD_LASTNAME_ID=00Np0000000Kd6Y
-OBJECT_LEAD_NATIVE_FIRSTNAME_ID=00Np0000000Kd5w
-OBJECT_LEAD_NATIVE_LASTNAME_ID=00Np0000000Kd6X
-OBJECT_LEAD_ADDRESS_ID=00Np0000000Kd61
-OBJECT_LEAD_PHONE_ID=00Np0000000Kd7J
-OBJECT_LEAD_FAX_ID=00Np0000000Kd5o
+OBJECT_LEAD_ID=a13/e
+OBJECT_LEAD_SALES_RECORD_TYPE_ID=012280000006I7s
+OBJECT_LEAD_FIRSTNAME_ID=00N2800000A9Ck9
+OBJECT_LEAD_LASTNAME_ID=00N2800000A9Ckk
+OBJECT_LEAD_NATIVE_FIRSTNAME_ID=00N2800000A9Ck8
+OBJECT_LEAD_NATIVE_LASTNAME_ID=00N2800000A9Ckj
+OBJECT_LEAD_ADDRESS_ID=00N2800000A9CkD
+OBJECT_LEAD_PHONE_ID=00N2800000A9ClV
+OBJECT_LEAD_FAX_ID=00N2800000A9Ck0
 
 OBJECT_CASE_ID=/500/e
-OBJECT_CASE_VEHICLE_RELATIONSHIP=00Np0000000Kdy6
-OBJECT_CASE_VEHICLE_RELATIONSHIP_LKIED=00Np0000000Kdy6_lkid
-OBJECT_CASE_Vehicle_ID=00Np0000000Kdy2
-OBJECT_CASE_INQUIRY_RECORDTYPEID=012p00000008VJ1
+OBJECT_CASE_VEHICLE_RELATIONSHIP=00N2800000A9CyM
+OBJECT_CASE_VEHICLE_RELATIONSHIP_LKIED=00N2800000A9CyM_lkid
+OBJECT_CASE_Vehicle_ID=00N2800000A9CyI
+OBJECT_CASE_INQUIRY_RECORDTYPEID=012280000006I86
 
-OBJECT_LEAD_CASE=00Np0000000Kd57
-OBJECT_lEAD_CASE_LKID=00Np0000000Kd57_lkid
-OBJECT_LEAD_ACCOUNT=00Np0000000Kd5G
-OBJECT_LEAD_ACCOUNT_LKID=00Np0000000Kd5G_lkid
-OBJECT_LEAD_OBJECTID=01Ip00000004MV0
-OBJECT_LEAD_TAB_ID=/a0v/e
+OBJECT_LEAD_CASE=00N2800000A9CjJ
+OBJECT_lEAD_CASE_LKID=00N2800000A9CjJ_lkid
+OBJECT_LEAD_ACCOUNT=00N2800000A9CjS
+OBJECT_LEAD_ACCOUNT_LKID=00N2800000A9CjS_lkid
+OBJECT_LEAD_OBJECTID=01I28000000vWSj
+OBJECT_LEAD_TAB_ID=/a13/e
 
-OBJECT_CAMPAIGN_WEBLINK_CAC_CAMPAIGN_RECORD_TYPE_ID=012p00000008VG8
-OBJECT_CAMPAIGN_WEBLINK_COMPLEX_EXECUTION_RECORD_TYPE_ID=012p00000008VGB
-OBJECT_CAMPAIGN_WEBLINK_SIMPLE_EXECUTION_RECORD_TYPE_ID=012p00000008VGA
+OBJECT_CAMPAIGN_WEBLINK_CAC_CAMPAIGN_RECORD_TYPE_ID=012280000006I7d
+OBJECT_CAMPAIGN_WEBLINK_COMPLEX_EXECUTION_RECORD_TYPE_ID=012280000006I7g
+OBJECT_CAMPAIGN_WEBLINK_SIMPLE_EXECUTION_RECORD_TYPE_ID=012280000006I7f
 
-CENTRAL_OFFICE_QUEUE_ID=00GN0000001KCcq
+CENTRAL_OFFICE_QUEUE_ID=00G28000000PfPe
 
 OBJECT_CAMPAIGN_LEAD_WEBLINK_OBJECT_KEYPREFIX=a0r
 OBJECT_CAMPAIGN_LEAD_WEBLINK_LEAD_FIELD_ID=00NN0000001NLAS
@@ -67,11 +67,11 @@ INTEREST_VEHICLE_CLASS_FIELD_ID_IN_LEAD=00NN0000001NLD4
 INTEREST_VEHICLE_MODEL_FIELD_ID_IN_LEAD=00NN0000001NLD7
 CONTACT_FIELD_ID_IN_LEAD=00NN0000001NLC9
 CASE_FIELD_ID_IN_LEAD=00NN0000001NLC0
-CASE_INQUIRY_TYPE_RECORDTYPEID=012p00000008VJ1
+CASE_INQUIRY_TYPE_RECORDTYPEID=012280000006I86
 VEHICLE_FIELD_ID_IN_CASE=00NN0000001NLPG
 VEHICLE_RELATIONSHIP_FIELD_ID_IN_CASE=00NN0000001NLPD
 
-WORKFLOW_OUTBOUND_MESSAGE_ENDPOINTURL=https://crm-salesforce-int.mercedes-benz.com/webservices/SuspectedDuplicateNotification
+WORKFLOW_OUTBOUND_MESSAGE_ENDPOINTURL=https://crm-salesforce.mercedes-benz.com/webservices/SuspectedDuplicateNotification
 
 SETTING_DEFAULT_CASE_OWNER=arun.iyer.ntt@mbj.daimler-apac.com
 SETTING_DEFAULT_CASE_USER=arun.iyer.ntt@mbj.daimler-apac.com
