Changes related to SFDCAU-595

--- a/src/main/destructive/destructive.properties
+++ b/src/main/destructive/destructive.properties
@@ -196,6 +196,7 @@ pre:CustomField:Activity.R_Result__c:AAABTPDuiFY=
 pre:CustomField:Activity.R_Smart_Hotline__c:AAABTPDujgc=
 pre:CustomField:Activity.R_Successful_Case_Amount__c:AAABTPDuk74=
 pre:CustomField:Activity.R_Successful_OB_Call__c:AAABTPDumAw=
+pre:CustomField:Rejected_Duplicate_Log__c.DUNumber__c:
 post:CustomField:Account.Other_Information__c:AAABTUdMuMw=
 post:CustomField:Account.How_old_are_they__c:AAABTUdMwbU=
 post:CustomField:Account.Household_person1_age__c:AAABTUdMyOs=
