--- a/src/main/transformations/dev_sb_asia_Test/token.properties
+++ b/src/main/transformations/dev_sb_asia_Test/token.properties
@@ -72,6 +72,7 @@ VEHICLE_FIELD_ID_IN_CASE=00NN0000001NLPG
 VEHICLE_RELATIONSHIP_FIELD_ID_IN_CASE=00NN0000001NLPD
 
 WORKFLOW_OUTBOUND_MESSAGE_ENDPOINTURL=https://crm-salesforce-dev.mercedes-benz.com/webservices/SuspectedDuplicateNotification
+WORKFLOW_OUTBOUND_MESSAGE_ENDPOINTURL_SEND_CAMPAIGN_ID_EP=https://crm-salesforce-int.mercedes-benz.com/webservices/CampaignUpdateNotification
 
 SETTING_DEFAULT_CASE_OWNER=arun.iyer.ntt@asia.daimler-apac.com.test
 SETTING_DEFAULT_CASE_USER=arun.iyer.ntt@asia.daimler-apac.com.test
