--- a/src/main/transformations/dev_sb_asia_ci/token.properties
+++ b/src/main/transformations/dev_sb_asia_ci/token.properties
@@ -14,7 +14,7 @@ OBJECT_LEAD_NATIVE_FIRSTNAME_ID=00Np0000000ODP8
 OBJECT_LEAD_NATIVE_LASTNAME_ID=00Np0000000ODPj
 OBJECT_LEAD_ADDRESS_ID=00Np0000000ODPD
 OBJECT_LEAD_PHONE_ID=00Np0000000ODQV
-OBJECT_LEAD_FAX_ID=00Np0000000ODP0 
+OBJECT_LEAD_FAX_ID=00Np0000000ODP0
 
 OBJECT_CASE_ID=/500/e
 OBJECT_CASE_VEHICLE_RELATIONSHIP=CF00Np0000000ODbU
@@ -72,6 +72,8 @@ VEHICLE_FIELD_ID_IN_CASE=00Np0000000ODbX
 VEHICLE_RELATIONSHIP_FIELD_ID_IN_CASE=00Np0000000ODbU
 
 WORKFLOW_OUTBOUND_MESSAGE_ENDPOINTURL=https://crm-salesforce-dev.mercedes-benz.com/webservices/SuspectedDuplicateNotification
+WORKFLOW_OUTBOUND_MESSAGE_ENDPOINTURL_SEND_CAMPAIGN_ID_EP=https://crm-salesforce-int.mercedes-benz.com/webservices/CampaignUpdateNotification
 
 SETTING_DEFAULT_CASE_OWNER=arun.iyer.ntt@asia.daimler-apac.com.ci
 SETTING_DEFAULT_CASE_USER=arun.iyer.ntt@asia.daimler-apac.com.ci
+
