--- a/src/main/transformations/dev_sb_asia_migration/token.properties
+++ b/src/main/transformations/dev_sb_asia_migration/token.properties
@@ -75,6 +75,7 @@ VEHICLE_FIELD_ID_IN_CASE=00Np0000000ODbX
 VEHICLE_RELATIONSHIP_FIELD_ID_IN_CASE=00Np0000000ODbU
 
 WORKFLOW_OUTBOUND_MESSAGE_ENDPOINTURL=https://crm-salesforce-dev.mercedes-benz.com/webservices/SuspectedDuplicateNotification
+WORKFLOW_OUTBOUND_MESSAGE_ENDPOINTURL_SEND_CAMPAIGN_ID_EP=https://crm-salesforce-int.mercedes-benz.com/webservices/CampaignUpdateNotification
 
 SETTING_DEFAULT_CASE_OWNER=arun.iyer.ntt@mbj.daimler-apac.com.migration
 SETTING_DEFAULT_CASE_USER=arun.iyer.ntt@mbj.daimler-apac.com.migration
