--- a/src/main/transformations/dev_sb_asia_prod/token.properties
+++ b/src/main/transformations/dev_sb_asia_prod/token.properties
@@ -72,6 +72,7 @@ VEHICLE_FIELD_ID_IN_CASE=00NN0000001NLPG
 VEHICLE_RELATIONSHIP_FIELD_ID_IN_CASE=00NN0000001NLPD
 
 WORKFLOW_OUTBOUND_MESSAGE_ENDPOINTURL=https://crm-salesforce.mercedes-benz.com/webservices/SuspectedDuplicateNotification
+WORKFLOW_OUTBOUND_MESSAGE_ENDPOINTURL_SEND_CAMPAIGN_ID_EP=https://crm-salesforce.mercedes-benz.com/webservices/CampaignUpdateNotification
 
 SETTING_DEFAULT_CASE_OWNER=arun.iyer.ntt@mbj.daimler-apac.com
 SETTING_DEFAULT_CASE_USER=arun.iyer.ntt@mbj.daimler-apac.com
