Updated dev boxes token files

--- a/src/main/transformations/dev_sb_asia_dev7/token.properties
+++ b/src/main/transformations/dev_sb_asia_dev7/token.properties
@@ -72,6 +72,7 @@ OBJECT_CASE_Vehicle_ID=00Np0000000K1FL
 OBJECT_CASE_INQUIRY_RECORDTYPEID=012p00000008UJy
 
 WORKFLOW_OUTBOUND_MESSAGE_ENDPOINTURL=https://crm-salesforce-dev.mercedes-benz.com/webservices/SuspectedDuplicateNotification
+WORKFLOW_OUTBOUND_MESSAGE_ENDPOINTURL_SEND_CAMPAIGN_ID_EP=https://crm-salesforce-dev.mercedes-benz.com/webservices/CampaignUpdateNotification
 
 SETTING_DEFAULT_CASE_OWNER=sudhirkumar.acharya.ntt@asia.daimler-apac.com.asiadev7
 SETTING_DEFAULT_CASE_USER=sudhirkumar.acharya.ntt@asia.daimler-apac.com.asiadev7
