--- a/src/main/transformations/dev_sb_asia_dev1/token.properties
+++ b/src/main/transformations/dev_sb_asia_dev1/token.properties
@@ -12,6 +12,19 @@ OBJECT_LEAD_FAX_ID=00Np0000000K3Xq
 
 CASE_INQUIRY_TYPE_RECORDTYPEID=012p00000008UP8
 
+OBJECT_CASE_ID=/500/e
+OBJECT_CASE_VEHICLE_RELATIONSHIP=CF00Np0000000K3kK
+OBJECT_CASE_VEHICLE_RELATIONSHIP_LKIED=CF00Np0000000K3kK_lkid
+OBJECT_CASE_Vehicle_ID=00Np0000000K3kG
+OBJECT_CASE_INQUIRY_RECORDTYPEID=012p00000008UP8
+ 
+OBJECT_LEAD_CASE=00Np0000000K3X9
+OBJECT_lEAD_CASE_LKID=00Np0000000K3X9_lkid
+OBJECT_LEAD_ACCOUNT=CF00Np0000000K3XE
+OBJECT_LEAD_ACCOUNT_LKID=CF00Np0000000K3XE_lkid
+OBJECT_LEAD_OBJECTID=01Ip00000004L6O
+OBJECT_LEAD_TAB_ID=/a0u/e
+
 OBJECT_CAMPAIGN_WEBLINK_CAC_CAMPAIGN_RECORD_TYPE_ID=012p00000008UOf
 OBJECT_CAMPAIGN_WEBLINK_COMPLEX_EXECUTION_RECORD_TYPE_ID=012p00000008UOi
 OBJECT_CAMPAIGN_WEBLINK_SIMPLE_EXECUTION_RECORD_TYPE_ID=012p00000008UOh
@@ -60,6 +73,7 @@ VEHICLE_FIELD_ID_IN_CASE=00Np0000000ODbX
 VEHICLE_RELATIONSHIP_FIELD_ID_IN_CASE=00Np0000000ODbU
 
 WORKFLOW_OUTBOUND_MESSAGE_ENDPOINTURL=https://crm-salesforce-dev.mercedes-benz.com/webservices/SuspectedDuplicateNotification
+WORKFLOW_OUTBOUND_MESSAGE_ENDPOINTURL_SEND_CAMPAIGN_ID_EP=https://crm-salesforce-dev.mercedes-benz.com/webservices/CampaignUpdateNotification
 
 SETTING_DEFAULT_CASE_OWNER=sukumar.rajashekaran.ntt@mbj.daimler-apac.com.asiadev1
 SETTING_DEFAULT_CASE_USER=sukumar.rajashekaran.ntt@mbj.daimler-apac.com.asiadev1
