--- a/src/main/transformations/dev_sb_asia_dev3/token.properties
+++ b/src/main/transformations/dev_sb_asia_dev3/token.properties
@@ -74,6 +74,7 @@ VEHICLE_FIELD_ID_IN_CASE=00Np0000000ODbX
 VEHICLE_RELATIONSHIP_FIELD_ID_IN_CASE=00Np0000000ODbU
 
 WORKFLOW_OUTBOUND_MESSAGE_ENDPOINTURL=https://crm-salesforce-dev.mercedes-benz.com/webservices/SuspectedDuplicateNotification
+WORKFLOW_OUTBOUND_MESSAGE_ENDPOINTURL_SEND_CAMPAIGN_ID_EP=https://crm-salesforce-dev.mercedes-benz.com/webservices/CampaignUpdateNotification
 
 SETTING_DEFAULT_CASE_OWNER=sneha.chail.ntt@asia.daimler-apac.com.asiadev3
 SETTING_DEFAULT_CASE_USER=sneha.chail.ntt@asia.daimler-apac.com.asiadev3
