--- a/src/main/transformations/dev_sb_asia_dev6/token.properties
+++ b/src/main/transformations/dev_sb_asia_dev6/token.properties
@@ -60,6 +60,7 @@ OBJECT_LEAD_FAX_ID=00Np0000000KAZo
 CASE_INQUIRY_TYPE_RECORDTYPEID=01200000008Ubi
 
 WORKFLOW_OUTBOUND_MESSAGE_ENDPOINTURL=https://crm-salesforce-dev.mercedes-benz.com/webservices/SuspectedDuplicateNotification
+WORKFLOW_OUTBOUND_MESSAGE_ENDPOINTURL_SEND_CAMPAIGN_ID_EP=https://crm-salesforce-dev.mercedes-benz.com/webservices/CampaignUpdateNotification
 
 SETTING_DEFAULT_CASE_OWNER=sriram.kalluri.ntt@asia.daimler-apac.com.asiadev6
 SETTING_DEFAULT_CASE_USER=sriram.kalluri.ntt@asia.daimler-apac.com.asiadev6
