--- a/src/main/transformations/dev_sb_asia_dev1/token.properties
+++ b/src/main/transformations/dev_sb_asia_dev1/token.properties
@@ -60,6 +60,7 @@ VEHICLE_FIELD_ID_IN_CASE=00Np0000000ODbX
 VEHICLE_RELATIONSHIP_FIELD_ID_IN_CASE=00Np0000000ODbU
 
 WORKFLOW_OUTBOUND_MESSAGE_ENDPOINTURL=https://crm-salesforce-dev.mercedes-benz.com/webservices/SuspectedDuplicateNotification
+WORKFLOW_OUTBOUND_MESSAGE_ENDPOINTURL_SEND_CAMPAIGN_ID_EP=https://crm-salesforce-int.mercedes-benz.com/webservices/CampaignUpdateNotification
 
 SETTING_DEFAULT_CASE_OWNER=sukumar.rajashekaran.ntt@mbj.daimler-apac.com.asiadev1
 SETTING_DEFAULT_CASE_USER=sukumar.rajashekaran.ntt@mbj.daimler-apac.com.asiadev1
