--- a/src/main/transformations/dev_sb_asia_dev9/token.properties
+++ b/src/main/transformations/dev_sb_asia_dev9/token.properties
@@ -74,6 +74,7 @@ OBJECT_LEAD_TAB_ID=a0t
 
 
 WORKFLOW_OUTBOUND_MESSAGE_ENDPOINTURL=https://crm-salesforce-dev.mercedes-benz.com/webservices/SuspectedDuplicateNotification
+WORKFLOW_OUTBOUND_MESSAGE_ENDPOINTURL_SEND_CAMPAIGN_ID_EP=https://crm-salesforce-int.mercedes-benz.com/webservices/CampaignUpdateNotification
 
 SETTING_DEFAULT_CASE_OWNER=mohanaraja.alla.ntt@asia.daimler-apac.com.asiadev9
 SETTING_DEFAULT_CASE_USER=mohanaraja.alla.ntt@asia.daimler-apac.com.asiadev9
