Changes as part AU Data model

--- a/src/main/destructive/destructive.properties
+++ b/src/main/destructive/destructive.properties
@@ -377,6 +377,7 @@ post:ApexClass:UserHelperTestRf:AAABThuLDmY=
 post:ApexClass:TaskHelperTestRf:AAABThuLDmY=
 post:ApexClass:AccountHelperTestRf:AAABThuLDmY=
 post:ApexClass:LeadHelperTestRf:AAABThuLDmY=
+pre:CustomField:Vehicle__c.Vehicle_Age__c:AAABUxwtZXX=
 post:RemoteSiteSetting:EP_Integration_Endpoint:AAABTprnHfY=
 pre:CustomField:Survey_Question__c.Total_Responses__c:AAABTsUqswo=
 post:ApexTrigger:RecallAfterInsertUpdate:AAABUEJMQQA=
