--- a/src/main/destructive/destructive.properties
+++ b/src/main/destructive/destructive.properties
@@ -470,3 +470,4 @@ post:ApexTrigger:chatter_answers_question_escalation_to_case_trigger:AAABUqvdurI
 post:ApexClass:ChatterAnswersEscalationTriggerHandler:AAABUqvd3kk=
 post:CustomField:Vehicle__c.Vehicle_Age__c:AAABUtBTvDw=
 post:CustomField:Campaign.LastRunDate__c:AAABUyJDIr0=
+post:CustomField:Campaign.NextRunDate__c:AAcBuyJDIr1=
