Object model changes as part of AU and MBJ go-live

--- a/src/main/destructive/destructive.properties
+++ b/src/main/destructive/destructive.properties
@@ -340,3 +340,4 @@ post:CustomField:Retail_Task__c.Annual_Call_Task_3_del__c:AAABURSY+HM=
 post:CustomField:Vehicle__c.Katashiki__c:AAABURSY9P0=
 post:CustomField:Vehicle__c.Ruibetsu__c:AAABURSY+HM=
 post:CustomField:Vehicle__c.Vehicle_Age__c:AAABUtA95X0=
+post:CustomField:Rejected_Duplicate_Log__c.Market_Discriminator__c:AAABUtA95Y1=
