Added variable to token files - SFDCJP-366

--- a/src/main/transformations/dev_sb_asia_Test/token.properties
+++ b/src/main/transformations/dev_sb_asia_Test/token.properties
@@ -9,6 +9,8 @@ OBJECT_LEAD_NATIVE_LASTNAME_ID=00NN0000001NLDQ
 OBJECT_LEAD_ADDRESS_ID=00NN0000001NLCu
 OBJECT_LEAD_PHONE_ID=00NN0000001NLEC
 OBJECT_LEAD_FAX_ID=00NN0000001NLCh
+OBJECT_LEAD_ACCOUNT_ID=CF00NN0000001NLC9
+OBJECT_LEAD_ACCOUNT_LKID=CF00NN0000001NLC9_lkid
 
 OBJECT_CASE_ID=/500/e
 OBJECT_CASE_VEHICLE_RELATIONSHIP=00NN0000001NLPD
