--- a/src/main/transformations/dev_sb_asia_dev1/token.properties
+++ b/src/main/transformations/dev_sb_asia_dev1/token.properties
@@ -1,6 +1,6 @@
 WORKFLOW_INTEGRATION_USER=sukumar.rajashekaran.ntt@mbj.daimler-apac.com.asiadev1
 
-OBJECT_LEAD_ID=/a0u/e  
+OBJECT_LEAD_ID=/a0u/e
 OBJECT_LEAD_SALES_RECORD_TYPE_ID=012p00000008UOu
 OBJECT_LEAD_FIRSTNAME_ID=00Np0000000K3Xz
 OBJECT_LEAD_LASTNAME_ID=00Np0000000K3Ya
@@ -9,6 +9,8 @@ OBJECT_LEAD_NATIVE_LASTNAME_ID=00Np0000000K3YZ
 OBJECT_LEAD_ADDRESS_ID=00Np0000000K3Y3
 OBJECT_LEAD_PHONE_ID=00Np0000000K3ZL
 OBJECT_LEAD_FAX_ID=00Np0000000K3Xq
+OBJECT_LEAD_ACCOUNT_ID=CF00Np0000000K3XE
+OBJECT_LEAD_ACCOUNT_LKID=CF00Np0000000K3XE_lkid
 
 CASE_INQUIRY_TYPE_RECORDTYPEID=012p00000008UP8
 
