--- a/src/main/transformations/dev_sb_asia_dev10/token.properties
+++ b/src/main/transformations/dev_sb_asia_dev10/token.properties
@@ -10,6 +10,8 @@ OBJECT_LEAD_NATIVE_LASTNAME_ID=00Np0000000Kd6X
 OBJECT_LEAD_ADDRESS_ID=00Np0000000Kd61
 OBJECT_LEAD_PHONE_ID=00Np0000000Kd7J
 OBJECT_LEAD_FAX_ID=00Np0000000Kd5o
+OBJECT_LEAD_ACCOUNT_ID=CF00NO0000001wS4x
+OBJECT_LEAD_ACCOUNT_LKID=CF00NO0000001wS4x_lkid
 
 OBJECT_CASE_ID=/500/e
 OBJECT_CASE_VEHICLE_RELATIONSHIP=00Np0000000Kdy6
