--- a/src/main/transformations/dev_sb_asia_dev2/token.properties
+++ b/src/main/transformations/dev_sb_asia_dev2/token.properties
@@ -9,6 +9,8 @@ OBJECT_LEAD_NATIVE_LASTNAME_ID=00Np0000000K91g
 OBJECT_LEAD_ADDRESS_ID=00Np0000000K91A
 OBJECT_LEAD_PHONE_ID=00Np0000000K92S
 OBJECT_LEAD_FAX_ID=00Np0000000K90x
+OBJECT_LEAD_ACCOUNT_ID=CF00Np0000000K90P
+OBJECT_LEAD_ACCOUNT_LKID=CF00Np0000000K90P_lkid
 
 OBJECT_CASE_ID=/500/o
 OBJECT_CASE_VEHICLE_RELATIONSHIP=00Np0000000K9DR
