--- a/src/main/transformations/dev_sb_asia_dev6/token.properties
+++ b/src/main/transformations/dev_sb_asia_dev6/token.properties
@@ -56,6 +56,8 @@ OBJECT_LEAD_NATIVE_LASTNAME_ID=00Np0000000KAaX
 OBJECT_LEAD_ADDRESS_ID=00Np0000000KAa1
 OBJECT_LEAD_PHONE_ID=00Np0000000KAbJ
 OBJECT_LEAD_FAX_ID=00Np0000000KAZo
+OBJECT_LEAD_ACCOUNT_ID=CF00NO0000001wS4x
+OBJECT_LEAD_ACCOUNT_LKID=CF00NO0000001wS4x_lkid
 
 CASE_INQUIRY_TYPE_RECORDTYPEID=01200000008Ubi
 
