--- a/src/main/transformations/dev_sb_asia_dev8/token.properties
+++ b/src/main/transformations/dev_sb_asia_dev8/token.properties
@@ -57,6 +57,8 @@ OBJECT_LEAD_NATIVE_LASTNAME_ID=00NO0000001wN30
 OBJECT_LEAD_ADDRESS_ID=00NO0000001wN2U
 OBJECT_LEAD_PHONE_ID=00NO0000001wN3m
 OBJECT_LEAD_FAX_ID=00NO0000001wN2H
+OBJECT_LEAD_ACCOUNT_ID=CF00NO0000001wS4x
+OBJECT_LEAD_ACCOUNT_LKID=CF00NO0000001wS4x_lkid
 
 OBJECT_CASE_ID=500/o
 OBJECT_CASE_VEHICLE_RELATIONSHIP=00NO0000001wNF5
