--- a/src/main/transformations/dev_sb_asia_dev9/token.properties
+++ b/src/main/transformations/dev_sb_asia_dev9/token.properties
@@ -58,6 +58,8 @@ OBJECT_LEAD_NATIVE_LASTNAME_ID=00Np0000000K0IE
 OBJECT_LEAD_ADDRESS_ID=00Np0000000K0Hi
 OBJECT_LEAD_PHONE_ID=00Np0000000K0J0
 OBJECT_LEAD_FAX_ID=00Np0000000K0HV
+OBJECT_LEAD_ACCOUNT_ID=CF00NO0000001wS4x
+OBJECT_LEAD_ACCOUNT_LKID=CF00NO0000001wS4x_lkid
 
 OBJECT_CASE_ID=500
 OBJECT_CASE_VEHICLE_RELATIONSHIP=00Np0000000K0UZ
