--- a/src/main/transformations/dev_sb_asia_migration/token.properties
+++ b/src/main/transformations/dev_sb_asia_migration/token.properties
@@ -1,6 +1,6 @@
 WORKFLOW_INTEGRATION_USER=arun.iyer.ntt@mbj.daimler-apac.com.migration
 
-OBJECT_LEAD_ID=/a0t/e  
+OBJECT_LEAD_ID=/a0t/e
 OBJECT_LEAD_SALES_RECORD_TYPE_ID=012p00000004J45
 OBJECT_LEAD_FIRSTNAME_ID=00Np0000000OW29
 OBJECT_LEAD_LASTNAME_ID=00Np0000000OW2u
@@ -9,6 +9,8 @@ OBJECT_LEAD_NATIVE_LASTNAME_ID=00Np0000000OW2t
 OBJECT_LEAD_ADDRESS_ID=00Np0000000OW2D
 OBJECT_LEAD_PHONE_ID=00Np0000000OW3f
 OBJECT_LEAD_FAX_ID=00Np0000000OW20
+OBJECT_LEAD_ACCOUNT_ID=CF00Np0000000ODOS
+OBJECT_LEAD_ACCOUNT_LKID=CF00Np0000000ODOS_lkid
 
 CASE_INQUIRY_TYPE_RECORDTYPEID=012p00000004J4x
 
