--- a/src/main/transformations/dev_sb_asia_prod/token.properties
+++ b/src/main/transformations/dev_sb_asia_prod/token.properties
@@ -1,6 +1,6 @@
 WORKFLOW_INTEGRATION_USER=arun.iyer.ntt@mbj.daimler-apac.com
 
-OBJECT_LEAD_ID=a13/e
+OBJECT_LEAD_ID=/a13/e
 OBJECT_LEAD_SALES_RECORD_TYPE_ID=012280000006I7s
 OBJECT_LEAD_FIRSTNAME_ID=00N2800000A9Ck9
 OBJECT_LEAD_LASTNAME_ID=00N2800000A9Ckk
@@ -9,6 +9,8 @@ OBJECT_LEAD_NATIVE_LASTNAME_ID=00N2800000A9Ckj
 OBJECT_LEAD_ADDRESS_ID=00N2800000A9CkD
 OBJECT_LEAD_PHONE_ID=00N2800000A9ClV
 OBJECT_LEAD_FAX_ID=00N2800000A9Ck0
+OBJECT_LEAD_ACCOUNT_ID=CF00N2800000A9CjS
+OBJECT_LEAD_ACCOUNT_LKID=CF00N2800000A9CjS_lkid
 
 OBJECT_CASE_ID=/500/e
 OBJECT_CASE_VEHICLE_RELATIONSHIP=00N2800000A9CyM
