--- a/src/main/transformations/dev_sb_asia_ci/token.properties
+++ b/src/main/transformations/dev_sb_asia_ci/token.properties
@@ -15,6 +15,8 @@ OBJECT_LEAD_NATIVE_LASTNAME_ID=00Np0000000ODPj
 OBJECT_LEAD_ADDRESS_ID=00Np0000000ODPD
 OBJECT_LEAD_PHONE_ID=00Np0000000ODQV
 OBJECT_LEAD_FAX_ID=00Np0000000ODP0
+OBJECT_LEAD_ACCOUNT_ID=CF00Np0000000ODOS
+OBJECT_LEAD_ACCOUNT_LKID=CF00Np0000000ODOS_lkid
 
 OBJECT_CASE_ID=/500/e
 OBJECT_CASE_VEHICLE_RELATIONSHIP=CF00Np0000000ODbU
