--- a/src/main/transformations/dev_sb_asia_dev3/token.properties
+++ b/src/main/transformations/dev_sb_asia_dev3/token.properties
@@ -9,6 +9,8 @@ OBJECT_LEAD_NATIVE_LASTNAME_ID=00NO0000001wS6E
 OBJECT_LEAD_ADDRESS_ID=00NO0000001wS5i
 OBJECT_LEAD_PHONE_ID=00NO0000001wS70
 OBJECT_LEAD_FAX_ID=00NO0000001wS5V
+OBJECT_LEAD_ACCOUNT_ID=CF00NO0000001wS4x
+OBJECT_LEAD_ACCOUNT_LKID=CF00NO0000001wS4x_lkid
 
 CASE_INQUIRY_TYPE_RECORDTYPEID=012O000000058Vr
 
