--- a/src/main/transformations/dev_sb_asia_dev5/token.properties
+++ b/src/main/transformations/dev_sb_asia_dev5/token.properties
@@ -57,6 +57,8 @@ OBJECT_LEAD_NATIVE_LASTNAME_ID=00Np0000000GzoX
 OBJECT_LEAD_ADDRESS_ID=00Np0000000Gzo1
 OBJECT_LEAD_PHONE_ID=00Np0000000GzpJ
 OBJECT_LEAD_FAX_ID=00Np0000000Gzno
+OBJECT_LEAD_ACCOUNT_ID=CF00NO0000001wS4x
+OBJECT_LEAD_ACCOUNT_LKID=CF00NO0000001wS4x_lkid
 
 
 OBJECT_CASE_ID=/500/o
