UPdated DEV7 token file

--- a/src/main/transformations/dev_sb_asia_dev7/token.properties
+++ b/src/main/transformations/dev_sb_asia_dev7/token.properties
@@ -57,6 +57,8 @@ OBJECT_LEAD_NATIVE_LASTNAME_ID=00Np0000000K13Z
 OBJECT_LEAD_ADDRESS_ID=00Np0000000K133
 OBJECT_LEAD_PHONE_ID=00Np0000000K14L
 OBJECT_LEAD_FAX_ID=00Np0000000K12q
+OBJECT_LEAD_ACCOUNT_ID=00Np0000000K12I
+OBJECT_LEAD_ACCOUNT_LKID=00Np0000000K12I_lkid
 
 OBJECT_LEAD_CASE=CF00Np0000000K129
 OBJECT_lEAD_CASE_LKID=CF00Np0000000K129_lkid
