--- a/src/main/transformations/dev_sb_asia_dev9/token.properties
+++ b/src/main/transformations/dev_sb_asia_dev9/token.properties
@@ -74,6 +74,9 @@ OBJECT_LEAD_ACCOUNT_LKID=00Np0000000K0Gx_lkid
 OBJECT_LEAD_OBJECTID=01Ip00000004KzX
 OBJECT_LEAD_TAB_ID=a0t
 
+OBJECT_LEAD_ACCOUNT_ID=00Np0000000K0Gx
+OBJECT_LEAD_ACCOUNT_LKID=00Np0000000K0Gx_lkid 
+
 WORKFLOW_OUTBOUND_MESSAGE_ENDPOINTURL=https://crm-salesforce-dev.mercedes-benz.com/webservices/SuspectedDuplicateNotification
 WORKFLOW_OUTBOUND_MESSAGE_ENDPOINTURL_SEND_CAMPAIGN_ID_EP=https://crm-salesforce-int.mercedes-benz.com/webservices/CampaignUpdateNotification
 
