--- a/src/main/destructive/destructive.properties
+++ b/src/main/destructive/destructive.properties
@@ -386,3 +386,4 @@ post:ApexClass:RecallAfterInsertUpdateTriggerHandler:AAABUEJMXE4=
 post:ApexClass:LeadConatctcontroller:AAABUWZ8G9M=
 post:ApexClass:LeadConatctcontrollerTest:AAABUWZ8G9M=
 post:CustomField:QC__c.PS_Comment_c__c:AAABULdK42U=
+pre:CustomField:Activity.Quote_Live__c:AAABULdK43F=
