Delete Product Offer from Activity

--- a/src/main/destructive/destructive.properties
+++ b/src/main/destructive/destructive.properties
@@ -387,4 +387,4 @@ post:ApexClass:LeadConatctcontroller:AAABUWZ8G9M=
 post:ApexClass:LeadConatctcontrollerTest:AAABUWZ8G9M=
 post:CustomField:QC__c.PS_Comment_c__c:AAABULdK42U=
 pre:CustomField:Activity.Quote_Live__c:AAABULdK43F=
-pre:CustomField:Lead_Product__c.Product_Offer__c:01I7A0000008nen=
+pre:CustomField:Activity.Product_Offer__c:00N7A000000QzJ6=
