Commit towards tickets SFDCAU-613,SFDCAU-628,SFDCAU-603

--- a/build.xml
+++ b/build.xml
@@ -322,7 +322,8 @@
 			<sf:include name="ComplaintDescriptionController"/>	
 			<sf:include name="ComplaintDescriptionControllerTest"/>	
 			<sf:include name="InlineVFToShowVehicleDetailController"/>
-            <sf:include name="InlineVFToShowVehicleDetailTest"/>			
+            <sf:include name="InlineVFToShowVehicleDetailTest"/>
+			<sf:include name="LeadProductDetailsInputController"/>			
 		</sf:typeset>
 		<sf:typeset name="triggers">
 			<sf:include name="TriggerDMRequest"/>
@@ -330,6 +331,7 @@
 		<sf:typeset name="pages"> 
 				<sf:include name="ComplaintDescriptionViewAll"/>
 				<sf:include name="InlineVFPageToShowGenericVehicleDetails"/>
+				<sf:include name="LeadProductDetailsInput"/>
 		</sf:typeset>		
 		</deploy>					
     </target>
