--- a/src/main/transformations/dev_sb_au_ci/token.properties
+++ b/src/main/transformations/dev_sb_au_ci/token.properties
@@ -80,5 +80,8 @@ OBJECT_LEAD_WEBLINK_OBJECT_KEYPREFIX=a0r
 OBJECT_LEAD_WEBLINK_CONTACT_FIELD_ID=CF00N17000000WZn3
 OBJECT_LEAD_WEBLINK_COMPANY_ACCOUNT_FIELD_ID=CF00N17000000WZmz
 
+OBJECT_ACTIVITIES_WEBLINK_CALLER_FIELD_ID=CF00N17000000Wa6s
+OBJECT_ACTIVITIES_DRMTASK_RECORDTYPE_ID=012170000000RVt
+
 SETTING_DEFAULT_CASE_OWNER=falk.lehmann.ntt@au.daimler-apac.com.ci
 SETTING_DEFAULT_CASE_USER=falk.lehmann.ntt@au.daimler-apac.com.ci
