Delete Lead Details Object

--- a/src/main/destructive/destructive.properties
+++ b/src/main/destructive/destructive.properties
@@ -248,6 +248,7 @@ post:CustomField:Case.Vehicle_Classtest__c:AAABTPA0Bxw=
 post:CustomObject:Vehicle_Group_Mapping__c:AAABTPCEP8M=
 post:ApexClass:campaignHistoryLogGeneration.cls:AAABTPCgmcA=
 post:CustomObject:Campaign_history_log__c:AAABTPCgpMI=
+pre:CustomObject:Lead_Details__c:AAABTPCgpMJ=
 post:CustomObject:Trigger_Enabled__c:AAABTPCgq64=
 post:ApexTrigger:ShareCampaignByClooaboration:AAABTPCgwhw=
 post:CustomField:Account.Mail_Status__c:AAABTPCgyXo=
