Modified Lead Sharing rules nad updated token properties for test and Uat

--- a/src/main/transformations/test_sb_au_test/token.properties
+++ b/src/main/transformations/test_sb_au_test/token.properties
@@ -81,5 +81,8 @@ OBJECT_LEAD_WEBLINK_OBJECT_KEYPREFIX=a0r
 OBJECT_LEAD_WEBLINK_CONTACT_FIELD_ID=CF00N55000000NyRW
 OBJECT_LEAD_WEBLINK_COMPANY_ACCOUNT_FIELD_ID=CF00N55000000NyRS
 
+OBJECT_ACTIVITIES_WEBLINK_CALLER_FIELD_ID=CF00N55000000Nyqv
+OBJECT_ACTIVITIES_DRMTASK_RECORDTYPE_ID=012550000004UBu
+
 SETTING_DEFAULT_CASE_OWNER=nazeer.ahamed.ntt@au.daimler-apac.com.test
 SETTING_DEFAULT_CASE_USER=nazeer.ahamed.ntt@au.daimler-apac.com.test
