--- a/src/main/transformations/uat_int_hf_sb_au_full/token.properties
+++ b/src/main/transformations/uat_int_hf_sb_au_full/token.properties
@@ -80,5 +80,8 @@ OBJECT_LEAD_WEBLINK_OBJECT_KEYPREFIX=a0r
 OBJECT_LEAD_WEBLINK_CONTACT_FIELD_ID=CF00N17000000cRly
 OBJECT_LEAD_WEBLINK_COMPANY_ACCOUNT_FIELD_ID=CF00N17000000cRlu
 
+OBJECT_ACTIVITIES_WEBLINK_CALLER_FIELD_ID=CF00N17000000cRzV
+OBJECT_ACTIVITIES_DRMTASK_RECORDTYPE_ID=
+
 SETTING_DEFAULT_CASE_OWNER=nazeer.ahamed.ntt@au.daimler-apac.com.full
 SETTING_DEFAULT_CASE_USER=nazeer.ahamed.ntt@au.daimler-apac.com.full
