--- a/src/main/transformations/dev_sb_au_dev5/token.properties
+++ b/src/main/transformations/dev_sb_au_dev5/token.properties
@@ -80,5 +80,8 @@ OBJECT_LEAD_WEBLINK_OBJECT_KEYPREFIX=a0r
 OBJECT_LEAD_WEBLINK_CONTACT_FIELD_ID=CF00N17000000eZrK
 OBJECT_LEAD_WEBLINK_COMPANY_ACCOUNT_FIELD_ID=CF00N17000000eZrG
 
+OBJECT_ACTIVITIES_WEBLINK_CALLER_FIELD_ID=CF00N1a000005s71I
+OBJECT_ACTIVITIES_DRMTASK_RECORDTYPE_ID=012q000000093SV
+
 SETTING_DEFAULT_CASE_OWNER=sudhirkumar.acharya@nttdata.com.au.dev5
 SETTING_DEFAULT_CASE_USER=sudhirkumar.acharya@nttdata.com.au.dev5
