--- a/src/main/destructive/destructive.properties
+++ b/src/main/destructive/destructive.properties
@@ -342,3 +342,4 @@ post:CustomField:Vehicle__c.Katashiki__c:AAABURSY9P0=
 post:CustomField:Vehicle__c.Ruibetsu__c:AAABURSY+HM=
 post:CustomField:Vehicle__c.Vehicle_Age__c:AAABUtA95X0=
 post:CustomField:Rejected_Duplicate_Log__c.Market_Discriminator__c:AAABUtA95Y1=
+post:CustomField:Activity.Ordered_Against_Factory__c
