--- a/src/main/destructive/destructive.properties
+++ b/src/main/destructive/destructive.properties
@@ -342,6 +342,6 @@ post:CustomField:Vehicle__c.Katashiki__c:AAABURSY9P0=
 post:CustomField:Vehicle__c.Ruibetsu__c:AAABURSY+HM=
 post:CustomField:Vehicle__c.Vehicle_Age__c:AAABUtA95X0=
 post:CustomField:Rejected_Duplicate_Log__c.Market_Discriminator__c:AAABUtA95Y1=
-pre:CustomField:Activity.Ordered_Against_Factory__c:AAABUYSY+HN=
+pre:CustomField:Activity.Ordered_Against_Factory__c:AAABHYSY+HN=
 pre:CustomField:Activity.Product_Offer__c:AAABNRST+HN=
 pre:CustomField:Activity.Quote_Live__c:AAAUULST+HN=
