Environment mapping changes

--- a/src/main/transformations/dev_sb_au_ci/token.properties
+++ b/src/main/transformations/dev_sb_au_ci/token.properties
@@ -1,4 +1,4 @@
-WORKFLOW_INTEGRATION_USER=falk.lehmann.ntt@au.daimler-apac.com.ci
+WORKFLOW_INTEGRATION_USER=nazeer.ahamed.ntt@au.daimler-apac.com.ci
 
 OBJECT_CAMPAIGN_WEBLINK_CAC_CAMPAIGN_RECORD_TYPE_ID=012O00000000fXL
 OBJECT_CAMPAIGN_WEBLINK_COMPLEX_EXECUTION_RECORD_TYPE_ID=012O00000000fXO
@@ -83,5 +83,5 @@ OBJECT_LEAD_WEBLINK_COMPANY_ACCOUNT_FIELD_ID=CF00N17000000WZmz
 OBJECT_ACTIVITIES_WEBLINK_CALLER_FIELD_ID=CF00N17000000Wa6s
 OBJECT_ACTIVITIES_DRMTASK_RECORDTYPE_ID=012170000000RVt
 
-SETTING_DEFAULT_CASE_OWNER=falk.lehmann.ntt@au.daimler-apac.com.ci
-SETTING_DEFAULT_CASE_USER=falk.lehmann.ntt@au.daimler-apac.com.ci
+SETTING_DEFAULT_CASE_OWNER=nazeer.ahamed.ntt@au.daimler-apac.com.ci
+SETTING_DEFAULT_CASE_USER=nazeer.ahamed.ntt@au.daimler-apac.com.ci
