--- a/src/main/destructive/destructive.properties
+++ b/src/main/destructive/destructive.properties
@@ -137,6 +137,8 @@
 pre:WorkflowRule:Lead__c.Update Status and Date time of Non-BDC Dealer:AAABTLiHUrI=
 post:Layout:Lead__c-Fleet Lead Layout:AAABVA70N0J=
 post:Layout:Lead__c-Finance Lead Layout to all except Fleet%2Ffleet delete:AAABVA70O2F=
+post:ApexPage:Lead_Address_Vehicle_Layout:AAABVA+tW2F=
+post:ApexPage:Lead_Address_Finance_Fleet_Layout:AAABVA+tX5Z=
 post:CustomField:Case.Case_Sub_Type__c:AAABTNb8szQ=
 post:CustomField:Account_Link__c.Type__c:AAABTNcHeg8=
 post:CustomObject:Trigger_Status__c:AAABTNqVqLo=
