--- a/src/main/transformations/uat_int_hf_sb_au_full/token.properties
+++ b/src/main/transformations/uat_int_hf_sb_au_full/token.properties
@@ -58,6 +58,8 @@ OBJECT_LEAD_WEBLINK_ASSIGNED_DEALER_ID=CF00N17000000cRlc
 OBJECT_LEAD_WEBLINK_BUSINESS_UNIT_ID=00N17000000cRlj
 OBJECT_LEAD_WEBLINK_EXISTING_CONTRACT_ID=CF00N17000000cRmQ
 OBJECT_LEAD_WEBLINK_LEAD_TAB_ID=a0r
+OBJECT_LEAD_WEBLINK_RECORDTYPEID=012170000000Ikh
+OBJECT_LEAD_WEBLINK_RECORDTYPEID_VANS=012170000000SDw
 
 OBJECT_DEALER_LOCATOR_WEBLINK_DEALER_NAME_ID=CF00N17000000cRYO
 OBJECT_DEALER_LOCATOR_WEBLINK_DEALER_NAME_LKID=CF00N17000000cRYO_lkid
