--- a/src/main/transformations/dev_sb_au_dev2/token.properties
+++ b/src/main/transformations/dev_sb_au_dev2/token.properties
@@ -58,6 +58,8 @@ OBJECT_LEAD_WEBLINK_ASSIGNED_DEALER_ID=CF00N1a000005s54s
 OBJECT_LEAD_WEBLINK_BUSINESS_UNIT_ID=00N1a000005s54z
 OBJECT_LEAD_WEBLINK_EXISTING_CONTRACT_ID=CF00N1a000005s55f
 OBJECT_LEAD_WEBLINK_LEAD_TAB_ID=a0s
+OBJECT_LEAD_WEBLINK_RECORDTYPEID=012170000004REW
+OBJECT_LEAD_WEBLINK_RECORDTYPEID_VANS=012170000000RVz
 
 OBJECT_DEALER_LOCATOR_WEBLINK_DEALER_NAME_ID=CF00N55000000NxvF
 OBJECT_DEALER_LOCATOR_WEBLINK_DEALER_NAME_LKID=CF00N55000000NxvF_lkid
@@ -79,6 +81,9 @@ OBJECT_VEHICLE_RELATIONSHIP_WEBLINK_OBJECT_ID=01I550000008X0p
 OBJECT_LEAD_WEBLINK_OBJECT_KEYPREFIX=a0s
 OBJECT_LEAD_WEBLINK_CONTACT_FIELD_ID=CF00N1a000005s55D
 OBJECT_LEAD_WEBLINK_COMPANY_ACCOUNT_FIELD_ID=CF00N1a000005s559
+
+OBJECT_ACTIVITIES_WEBLINK_CALLER_FIELD_ID=CF00N17000000Wa6s
+OBJECT_ACTIVITIES_DRMTASK_RECORDTYPE_ID=012170000000RVt
 
 SETTING_DEFAULT_CASE_OWNER=sukumar.rajashekaran.ntt@au.daimler-apac.com.dev2
 SETTING_DEFAULT_CASE_USER=sukumar.rajashekaran.ntt@au.daimler-apac.com.dev2
