--- a/src/main/transformations/dev_sb_au_austage/token.properties
+++ b/src/main/transformations/dev_sb_au_austage/token.properties
@@ -58,6 +58,9 @@ OBJECT_LEAD_WEBLINK_ASSIGNED_DEALER_ID=CF00N1a000005s54s
 OBJECT_LEAD_WEBLINK_BUSINESS_UNIT_ID=00N1a000005s54z
 OBJECT_LEAD_WEBLINK_EXISTING_CONTRACT_ID=CF00N1a000005s55f
 OBJECT_LEAD_WEBLINK_LEAD_TAB_ID=a0s
+OBJECT_LEAD_WEBLINK_RECORDTYPEID=012550000004I9s
+OBJECT_LEAD_WEBLINK_RECORDTYPEID_VANS=012550000004UBp
+OBJECT_LEAD_WEBLINK_ACCOUNT_COMPONENTID=CF00N55000000NyRS
 
 OBJECT_DEALER_LOCATOR_WEBLINK_DEALER_NAME_ID=CF00N55000000NxvF
 OBJECT_DEALER_LOCATOR_WEBLINK_DEALER_NAME_LKID=CF00N55000000NxvF_lkid
