Adding changes to build.xml

--- a/build.xml
+++ b/build.xml
@@ -221,6 +221,9 @@
 			</sf:typeset>
 			<sf:typeset name="groups"/>
 			<sf:typeset name="queues"/>
+		<sf:typeset name="pages"> 
+			<sf:include name="Lead_Product_Attendee"/>
+		</sf:typeset>
 		</deploy>
     </target>
 	
@@ -442,8 +445,7 @@
 				<sf:include name="ChangePassword"/>
 				<sf:include name="SiteLogin"/>				
 				<sf:include name="ForgotPassword"/>
-				<sf:include name="SiteRegister"/>
-				<sf:include name="Lead_Product_Attendee"/>
+				<sf:include name="SiteRegister"/>				
 		</sf:typeset>		
 		<sf:typeset name="components">
 				<sf:include name="SitePoweredBy"/>   
