--- a/src/main/transformations/uat_int_hf_sb_au_full/token.properties
+++ b/src/main/transformations/uat_int_hf_sb_au_full/token.properties
@@ -52,15 +52,15 @@ OBJECT_ACCOUNT_WEBLINK_COMPANY_FIELD_ID=CF00N17000000cROK
 OBJECT_ACCOUNT_WEBLINK_COMPANY_FIELD_LKID=CF00N17000000cROK_lkid
 OBJECT_ACCOUNT_WEBLINK_PERSON_ACCOUNT_RECORDTYPE_ID=0121a000000TtT3
 
-OBJECT_LEAD_WEBLINK_CONTACT_ID=CF00N17000000cRly
-OBJECT_LEAD_WEBLINK_COMPANY_ACCOUNT_ID=CF00N17000000cRlu
+OBJECT_LEAD_WEBLINK_CONTACT_ID=CF00N1a000005s55D
+OBJECT_LEAD_WEBLINK_COMPANY_ACCOUNT_ID=CF00N1a000005s559
 OBJECT_LEAD_WEBLINK_ASSIGNED_DEALER_ID=CF00N17000000cRlc  
-OBJECT_LEAD_WEBLINK_BUSINESS_UNIT_ID=00N17000000cRlj
+OBJECT_LEAD_WEBLINK_BUSINESS_UNIT_ID=00N1a000005s54z
 OBJECT_LEAD_WEBLINK_EXISTING_CONTRACT_ID=CF00N17000000cRmQ
-OBJECT_LEAD_WEBLINK_LEAD_TAB_ID=a0r
-OBJECT_LEAD_WEBLINK_RECORDTYPEID=012170000000Ikh
-OBJECT_LEAD_WEBLINK_RECORDTYPEID_VANS=012170000000SDw
-OBJECT_LEAD_WEBLINK_ACCOUNT_COMPONENTID = CF00N17000000cRlu
+OBJECT_LEAD_WEBLINK_LEAD_TAB_ID=a0s
+OBJECT_LEAD_WEBLINK_RECORDTYPEID=0121a000000V7Nd
+OBJECT_LEAD_WEBLINK_RECORDTYPEID_VANS=012m00000000fo7
+OBJECT_LEAD_WEBLINK_ACCOUNT_COMPONENTID = CF00N1a000005s559
 
 
 OBJECT_DEALER_LOCATOR_WEBLINK_DEALER_NAME_ID=CF00N17000000cRYO
