--- a/src/main/transformations/dev_sb_au_dev5/token.properties
+++ b/src/main/transformations/dev_sb_au_dev5/token.properties
@@ -71,6 +71,7 @@ OBJECT_ADDRESS_WEBLINK_CUSTOMER_LKID=CF00N55000000Nxt1_lkid
 OBJECT_ADDRESS_WEBLINK_ADDRESS_OBJECT_ID=01I550000008X04
 OBJECT_ADDRESS_WEBLINK_INDIVIDUAL_RECORDTYPE_ID=012550000004I8O
 OBJECT_ADDRESS_WEBLINK_DEALER_RECORDTYPE_ID=012550000004I8N
+OBJECT_ADDRESS_WEBLINK_COMPANY_RECORDTYPE_ID=0121a000000V7Kf
 OBJECT_ADDRESS_WEBLINK_ADDRESS_TAB_ID=a02
 
 OBJECT_VEHICLE_RELATIONSHIP_WEBLINK_V_R_TAB_TAB_ID=a0n
