--- a/src/main/transformations/test_sb_au_test/token.properties
+++ b/src/main/transformations/test_sb_au_test/token.properties
@@ -66,12 +66,12 @@ OBJECT_DEALER_LOCATOR_WEBLINK_DEALER_NAME_ID=CF00N55000000NxvF
 OBJECT_DEALER_LOCATOR_WEBLINK_DEALER_NAME_LKID=CF00N55000000NxvF_lkid
 OBJECT_DEALER_LOCATOR_WEBLINK_POST_CODE_ID=00N55000000NxvL
 
-
 OBJECT_ADDRESS_WEBLINK_CUSTOMER_ID=CF00N55000000Nxt1
 OBJECT_ADDRESS_WEBLINK_CUSTOMER_LKID=CF00N55000000Nxt1_lkid
 OBJECT_ADDRESS_WEBLINK_ADDRESS_OBJECT_ID=01I550000008X04
 OBJECT_ADDRESS_WEBLINK_INDIVIDUAL_RECORDTYPE_ID=012550000004I8O
 OBJECT_ADDRESS_WEBLINK_DEALER_RECORDTYPE_ID=012550000004I8N
+OBJECT_ADDRESS_WEBLINK_COMPANY_RECORDTYPE_ID=012550000004I8M
 OBJECT_ADDRESS_WEBLINK_ADDRESS_TAB_ID=a02
 
 OBJECT_VEHICLE_RELATIONSHIP_WEBLINK_V_R_TAB_TAB_ID=a0n
