--- a/src/main/transformations/uat_int_hf_sb_au_full/token.properties
+++ b/src/main/transformations/uat_int_hf_sb_au_full/token.properties
@@ -58,6 +58,9 @@ OBJECT_LEAD_WEBLINK_ASSIGNED_DEALER_ID=CF00N17000000cRlc
 OBJECT_LEAD_WEBLINK_BUSINESS_UNIT_ID=00N17000000cRlj
 OBJECT_LEAD_WEBLINK_EXISTING_CONTRACT_ID=CF00N17000000cRmQ
 OBJECT_LEAD_WEBLINK_LEAD_TAB_ID=a0r
+OBJECT_LEAD_WEBLINK_RECORDTYPEID=012170000000Ikh
+OBJECT_LEAD_WEBLINK_RECORDTYPEID_VANS=012170000000SDw
+OBJECT_LEAD_WEBLINK_ACCOUNT_COMPONENTID=CF00N17000000cRlu
 
 OBJECT_DEALER_LOCATOR_WEBLINK_DEALER_NAME_ID=CF00N17000000cRYO
 OBJECT_DEALER_LOCATOR_WEBLINK_DEALER_NAME_LKID=CF00N17000000cRYO_lkid
@@ -68,6 +71,7 @@ OBJECT_ADDRESS_WEBLINK_CUSTOMER_LKID=CF00N17000000cRNS_lkid
 OBJECT_ADDRESS_WEBLINK_ADDRESS_OBJECT_ID=01I170000000WGf
 OBJECT_ADDRESS_WEBLINK_INDIVIDUAL_RECORDTYPE_ID=012170000000Ijm
 OBJECT_ADDRESS_WEBLINK_DEALER_RECORDTYPE_ID=012550000004I8N
+OBJECT_ADDRESS_WEBLINK_COMPANY_RECORDTYPE_ID=0121a000000V7Kf
 OBJECT_ADDRESS_WEBLINK_ADDRESS_TAB_ID=a02
 
 OBJECT_VEHICLE_RELATIONSHIP_WEBLINK_V_R_TAB_TAB_ID=a0n
