Adding destructive changes

--- a/src/main/destructive/destructive.properties
+++ b/src/main/destructive/destructive.properties
@@ -345,3 +345,4 @@ post:CustomField:Rejected_Duplicate_Log__c.Market_Discriminator__c:AAABUtA95Y1=
 pre:CustomField:Activity.Ordered_Against_Factory__c:AAABU8I4JA8=
 pre:CustomField:Activity.Product_Offer__c:AAABU8JWjsY=
 pre:CustomField:Activity.Quote_Live__c:AAABU8JWkMk=
+post:CustomField:Retail_Task__c.Contract_Start_Date__c:AAABVMIufzI=
