adding destructive changes

--- a/src/main/destructive/destructive.properties
+++ b/src/main/destructive/destructive.properties
@@ -471,4 +471,4 @@ post:ApexClass:ChatterAnswersEscalationTriggerHandler:AAABUqvd3kk=
 post:CustomField:Vehicle__c.Vehicle_Age__c:AAABUtBTvDw=
 post:CustomField:Campaign.LastRunDate__c:AAABUyJDIr0=
 post:CustomField:Campaign.NextRunDate__c:AAcBuyJDIr1=
-post:CustomField:Retail_Task__c.Contract_Start_Date__c
+post:CustomField:Retail_Task__c.Contract_Start_Date__c:AAABVMPIzCA=
