--- a/src/main/transformations/uat_int_hf_sb_au_full/token.properties
+++ b/src/main/transformations/uat_int_hf_sb_au_full/token.properties
@@ -57,6 +57,7 @@ OBJECT_LEAD_WEBLINK_COMPANY_ACCOUNT_ID=CF00N1a000005s559
 OBJECT_LEAD_WEBLINK_ASSIGNED_DEALER_ID=CF00N17000000cRlc  
 OBJECT_LEAD_WEBLINK_BUSINESS_UNIT_ID=00N1a000005s54z
 OBJECT_LEAD_WEBLINK_EXISTING_CONTRACT_ID=CF00N17000000cRmQ
+OBJECT_LEAD_WEBLINK_COMPANY_VEHICLERELATIONSHIP_NO_ID=CF00N1a000005s58T
 OBJECT_LEAD_WEBLINK_LEAD_TAB_ID=a0s
 OBJECT_LEAD_WEBLINK_RECORDTYPEID=0121a000000V7Nd
 OBJECT_LEAD_WEBLINK_RECORDTYPEID_VANS=012m00000000fo7
