Removing Updated By EP Transaction field from Claim

--- a/src/main/destructive/destructive.properties
+++ b/src/main/destructive/destructive.properties
@@ -346,3 +346,4 @@ pre:CustomField:Activity.Ordered_Against_Factory__c:AAABU8I4JA8=
 pre:CustomField:Activity.Product_Offer__c:AAABU8JWjsY=
 pre:CustomField:Activity.Quote_Live__c:AAABU8JWkMk=
 post:CustomField:Retail_Task__c.Contract_Start_Date__c:AAABVMIufzI=
+post:CustomField:Claim__c.Updated_By_EP_Transaction__c:AAABVVQQ1Kg=
