removed Updated from EP transaction field from Claim__c

--- a/src/main/destructive/destructive.properties
+++ b/src/main/destructive/destructive.properties
@@ -393,3 +393,4 @@ post:ApexClass:LeadConatctcontrollerTest:AAABUWZ8G9M=
 post:CustomField:QC__c.PS_Comment_c__c:AAABULdK42U=
 pre:CustomField:Activity.Quote_Live__c:AAABULdK43F=
 pre:CustomField:Activity.Product_Offer__c:00N7A000000QzJ6=
+post:CustomField:Claim__c.Updated_By_EP_Transaction__c:AAABVVesIaM=
