--- a/build.xml
+++ b/build.xml
@@ -522,7 +522,7 @@
 	<target name="deploy37">
 		<deploy runAllTests="${sfdc.runAllTests}">
 		<sf:typeset name="classes">
-			<sf:include name="LeadHelperTest"/>
+			<!--<sf:include name="LeadHelperTest"/>-->
 			<sf:include name="ReservationMessageTemplate"/>
 			<sf:include name="ReservationMessageTemplateTest"/>
 			<sf:include name="LeadSharingWrapService"/>
@@ -702,7 +702,7 @@
 			<sf:include name="CampaignPackageHelper"/>
 			<sf:include name="CampaignPackageHelperTest"/>
 			<sf:include name="ChatterAnswersEscalationTriggerHandler"/>
-			<sf:include name="RetailTaskHelperTest"/>
+			<!--<sf:include name="RetailTaskHelperTest"/>-->
 			<sf:include name="HistoryRespondController"/>
 			<sf:include name="HistoryRespondControllerTest"/>
 			<sf:include name="TriggerCampaignTriggerHandler"/>			
@@ -744,7 +744,9 @@
 			<sf:include name="MyProcess"/>
 			<sf:include name="MyProcessTest"/>		 	
 			<sf:include name="BatchUpdateRecords"/>
-			<sf:include name="BatchUpdateRecordsTest"/>			
+			<sf:include name="BatchUpdateRecordsTest"/>
+			<sf:include name="RetailTaskHelperTest"/>
+			<sf:include name="LeadHelperTest"/>
 		</sf:typeset>
 		<sf:typeset name="pages"> 
 				<sf:include name="LeadConverting"/>
