--- a/build.xml
+++ b/build.xml
@@ -522,7 +522,7 @@
 	<target name="deploy37">
 		<deploy runAllTests="${sfdc.runAllTests}">
 		<sf:typeset name="classes">
-			<!--<sf:include name="LeadHelperTest"/>-->
+			<sf:include name="LeadHelperTest"/>
 			<sf:include name="ReservationMessageTemplate"/>
 			<sf:include name="ReservationMessageTemplateTest"/>
 			<sf:include name="LeadSharingWrapService"/>
@@ -549,6 +549,7 @@
 			<sf:include name="Finance_Leads_Only"/>			
 			<sf:include name="Leads_Assignment_to_Dealer_Gate_Keepers"/>
 			<sf:include name="Leads_Immediate_Notice"/>
+			<sf:include name="Email_notification_when_Assigned_Dealer_is_changed"/>
 		</sf:typeset>
 		<sf:typeset name="components">
 			<sf:include name="eoc_links"/>			
@@ -702,7 +703,7 @@
 			<sf:include name="CampaignPackageHelper"/>
 			<sf:include name="CampaignPackageHelperTest"/>
 			<sf:include name="ChatterAnswersEscalationTriggerHandler"/>
-			<!--<sf:include name="RetailTaskHelperTest"/>-->
+			<sf:include name="RetailTaskHelperTest"/>
 			<sf:include name="HistoryRespondController"/>
 			<sf:include name="HistoryRespondControllerTest"/>
 			<sf:include name="TriggerCampaignTriggerHandler"/>			
@@ -745,8 +746,6 @@
 			<sf:include name="MyProcessTest"/>		 	
 			<sf:include name="BatchUpdateRecords"/>
 			<sf:include name="BatchUpdateRecordsTest"/>
-			<sf:include name="RetailTaskHelperTest"/>
-			<sf:include name="LeadHelperTest"/>
 		</sf:typeset>
 		<sf:typeset name="pages"> 
 				<sf:include name="LeadConverting"/>
