--- a/src/main/transformations/prod_sb_au_prod/token.properties
+++ b/src/main/transformations/prod_sb_au_prod/token.properties
@@ -59,6 +59,9 @@ OBJECT_LEAD_WEBLINK_BUSINESS_UNIT_ID=00N1a000005s54z
 OBJECT_LEAD_WEBLINK_EXISTING_CONTRACT_ID=CF00N1a000005s55f
 OBJECT_LEAD_WEBLINK_COMPANY_VEHICLERELATIONSHIP_NO_ID=CF00N1a000005s58T
 OBJECT_LEAD_WEBLINK_LEAD_TAB_ID=a0s
+OBJECT_LEAD_WEBLINK_RECORDTYPEID=0121a000000V7Nd
+OBJECT_LEAD_WEBLINK_RECORDTYPEID_VANS=
+OBJECT_LEAD_WEBLINK_ACCOUNT_COMPONENTID = CF00N1a000005s559
 
 OBJECT_DEALER_LOCATOR_WEBLINK_DEALER_NAME_ID=CF00N1a000005s40H
 OBJECT_DEALER_LOCATOR_WEBLINK_DEALER_NAME_LKID=CF00N1a000005s40H_lkid
@@ -69,6 +72,7 @@ OBJECT_ADDRESS_WEBLINK_CUSTOMER_LKID=CF00N1a000005s3pK_lkid
 OBJECT_ADDRESS_WEBLINK_ADDRESS_OBJECT_ID=01I1a000000SYFy
 OBJECT_ADDRESS_WEBLINK_INDIVIDUAL_RECORDTYPE_ID=0121a000000V7Kh 
 OBJECT_ADDRESS_WEBLINK_DEALER_RECORDTYPE_ID=0121a000000V7Kg  
+OBJECT_ADDRESS_WEBLINK_COMPANY_RECORDTYPE_ID=0121a000000V7Kf
 OBJECT_ADDRESS_WEBLINK_ADDRESS_TAB_ID=a02
 
 OBJECT_VEHICLE_RELATIONSHIP_WEBLINK_V_R_TAB_TAB_ID=a0o
@@ -76,6 +80,9 @@ OBJECT_VEHICLE_RELATIONSHIP_WEBLINK_CONTACT_ID=CF00N1a000005s49i
 OBJECT_VEHICLE_RELATIONSHIP_WEBLINK_CONTACT_LKID=0CF00N1a000005s49i_lkid
 OBJECT_VEHICLE_RELATIONSHIP_WEBLINK_INDIVIDUAL_RECORDTYPE_ID=0121a000000V7LS
 OBJECT_VEHICLE_RELATIONSHIP_WEBLINK_OBJECT_ID=01I1a000000SYGk
+
+OBJECT_ACTIVITIES_WEBLINK_CALLER_FIELD_ID=CF00N1a000005s71I
+OBJECT_ACTIVITIES_DRMTASK_RECORDTYPE_ID=
 
 OBJECT_LEAD_WEBLINK_OBJECT_KEYPREFIX=a0s
 OBJECT_LEAD_WEBLINK_CONTACT_FIELD_ID=CF00N1a000005s55D
