--- a/src/main/transformations/dev_sb_au_mr/token.properties
+++ b/src/main/transformations/dev_sb_au_mr/token.properties
@@ -59,6 +59,9 @@ OBJECT_LEAD_WEBLINK_BUSINESS_UNIT_ID=00N1a000005s54z
 OBJECT_LEAD_WEBLINK_EXISTING_CONTRACT_ID=CF00N1a000005s55f
 OBJECT_LEAD_WEBLINK_COMPANY_VEHICLERELATIONSHIP_NO_ID=CF00N1a000005s58T
 OBJECT_LEAD_WEBLINK_LEAD_TAB_ID=a0s
+OBJECT_LEAD_WEBLINK_RECORDTYPEID=0121a000000V7Nd
+OBJECT_LEAD_WEBLINK_RECORDTYPEID_VANS=0121a0000002Il0
+OBJECT_LEAD_WEBLINK_ACCOUNT_COMPONENTID = CF00N1a000005s559
 
 OBJECT_DEALER_LOCATOR_WEBLINK_DEALER_NAME_ID=CF00N55000000NxvF
 OBJECT_DEALER_LOCATOR_WEBLINK_DEALER_NAME_LKID=CF00N55000000NxvF_lkid
@@ -68,7 +71,8 @@ OBJECT_ADDRESS_WEBLINK_CUSTOMER_ID=CF00N55000000Nxt1
 OBJECT_ADDRESS_WEBLINK_CUSTOMER_LKID=CF00N55000000Nxt1_lkid
 OBJECT_ADDRESS_WEBLINK_ADDRESS_OBJECT_ID=01I550000008X04
 OBJECT_ADDRESS_WEBLINK_INDIVIDUAL_RECORDTYPE_ID=0121a000000V7Kh
-OBJECT_ADDRESS_WEBLINK_DEALER_RECORDTYPE_ID=012550000004I8N  
+OBJECT_ADDRESS_WEBLINK_DEALER_RECORDTYPE_ID=012550000004I8N 
+OBJECT_ADDRESS_WEBLINK_COMPANY_RECORDTYPE_ID=0121a000000V7Kf 
 OBJECT_ADDRESS_WEBLINK_ADDRESS_TAB_ID=a02
 
 OBJECT_VEHICLE_RELATIONSHIP_WEBLINK_V_R_TAB_TAB_ID=a0n
@@ -76,6 +80,9 @@ OBJECT_VEHICLE_RELATIONSHIP_WEBLINK_CONTACT_ID=CF00N55000000Ny4f
 OBJECT_VEHICLE_RELATIONSHIP_WEBLINK_CONTACT_LKID=0CF0N55000000Ny4f_lkid
 OBJECT_VEHICLE_RELATIONSHIP_WEBLINK_INDIVIDUAL_RECORDTYPE_ID=012550000004I8m
 OBJECT_VEHICLE_RELATIONSHIP_WEBLINK_OBJECT_ID=01I550000008X0p
+
+OBJECT_ACTIVITIES_WEBLINK_CALLER_FIELD_ID=CF00N1a000005s71I
+OBJECT_ACTIVITIES_DRMTASK_RECORDTYPE_ID=0121a0000002IlB
 
 OBJECT_LEAD_WEBLINK_OBJECT_KEYPREFIX=a0s
 OBJECT_LEAD_WEBLINK_CONTACT_FIELD_ID=CF00N1a000005s55D
