--- a/src/main/transformations/test_sb_au_test/token.properties
+++ b/src/main/transformations/test_sb_au_test/token.properties
@@ -57,6 +57,7 @@ OBJECT_LEAD_WEBLINK_COMPANY_ACCOUNT_ID=CF00N55000000NyRS
 OBJECT_LEAD_WEBLINK_ASSIGNED_DEALER_ID=CF00N55000000NyRB
 OBJECT_LEAD_WEBLINK_BUSINESS_UNIT_ID=00N55000000NyRI
 OBJECT_LEAD_WEBLINK_EXISTING_CONTRACT_ID=CF00N55000000NyRx
+OBJECT_LEAD_WEBLINK_COMPANY_VEHICLERELATIONSHIP_NO_ID=CF00N1a000005s58T
 OBJECT_LEAD_WEBLINK_LEAD_TAB_ID=a0r
 OBJECT_LEAD_WEBLINK_RECORDTYPEID=012550000004I9s
 OBJECT_LEAD_WEBLINK_RECORDTYPEID_VANS=012550000004UBp
