Added New field to Lead object

--- a/src/main/destructive/destructive.properties
+++ b/src/main/destructive/destructive.properties
@@ -327,6 +327,7 @@ post:CustomField:Account.Household_Total__c:AAABUPVSVyg=
 post:CustomField:Account.MiddleName__c:AAABUPVSW10=
 post:CustomField:Account.MiddleName_Native_1__c:AAABUPVSXjo=
 post:CustomField:Account.Region__c:AAABUPVSYn4=
+post:CustomField:Lead__c.Behavioural_group_c__c:AAABUPVSYnk=
 post:ApexClass:TriggerSurveyQuestionResponseHandler:AAABUFroOWS=
 post:ApexClass:TriggerSurveyQuestionResponseTest:AAABUFroOWS=
 post:ApexClass:UtilSurveyQuestionResponse:AAABUFroOWS=
