--- a/src/main/transformations/dev_sb_kernel_dev3/token.properties
+++ b/src/main/transformations/dev_sb_kernel_dev3/token.properties
@@ -1,4 +1,4 @@
-WORKFLOW_INTEGRATION_USER=sukumar.rajashekaran.ntt@kernel.daimler-apac.com.dev3
+WORKFLOW_INTEGRATION_USER=sukumar.rajashekaran.ntt@kernel.daimler-apac.com.kerneldev3
 
 OBJECT_CAMPAIGN_WEBLINK_CAC_CAMPAIGN_RECORD_TYPE_ID=012O00000000fXL
 OBJECT_CAMPAIGN_WEBLINK_COMPLEX_EXECUTION_RECORD_TYPE_ID=012O00000000fXO
@@ -47,5 +47,5 @@ CASE_FIELD_ID_IN_LEAD=00NO0000001aqHv
 VEHICLE_FIELD_ID_IN_CASE=CF00NO0000001arb9
 VEHICLE_RELATIONSHIP_FIELD_ID_IN_CASE=CF00NO0000001arb7
 
-SETTING_DEFAULT_CASE_OWNER=sukumar.rajashekaran.ntt@kernel.daimler-apac.com.dev3
-SETTING_DEFAULT_CASE_USER=sukumar.rajashekaran.ntt@kernel.daimler-apac.com.dev3
+SETTING_DEFAULT_CASE_OWNER=sukumar.rajashekaran.ntt@kernel.daimler-apac.com.kerneldev3
+SETTING_DEFAULT_CASE_USER=sukumar.rajashekaran.ntt@kernel.daimler-apac.com.kerneldev3
