--- a/src/main/destructive/destructive.properties
+++ b/src/main/destructive/destructive.properties
@@ -328,6 +328,8 @@ post:CustomField:Account.MiddleName__c:AAABUPVSW10=
 post:CustomField:Account.MiddleName_Native_1__c:AAABUPVSXjo=
 post:CustomField:Account.Region__c:AAABUPVSYn4=
 post:CustomField:Lead__c.Behavioural_group_c__c:AAABUPVSYnk=
+post:CustomField:Lead__c.Nurture__c:AAABUPVSYrb=
+post:CustomField:Lead__c.Nurture_Date__c:AAABUPVSYbr=
 post:ApexClass:TriggerSurveyQuestionResponseHandler:AAABUFroOWS=
 post:ApexClass:TriggerSurveyQuestionResponseTest:AAABUFroOWS=
 post:ApexClass:UtilSurveyQuestionResponse:AAABUFroOWS=
