--- a/src/main/transformations/dev_sb_asia_dev2/token.properties
+++ b/src/main/transformations/dev_sb_asia_dev2/token.properties
@@ -1,4 +1,4 @@
-WORKFLOW_INTEGRATION_USER=arun.iyer.ntt@asia.daimler-apac.com.asiadev2
+WORKFLOW_INTEGRATION_USER=sekhara.vanga.ntt@asia.daimler-apac.com.asiadev2
 
 OBJECT_LEAD_ID=/a0u/o
 OBJECT_LEAD_SALES_RECORD_TYPE_ID=012p00000008UZO
@@ -76,5 +76,5 @@ VEHICLE_RELATIONSHIP_FIELD_ID_IN_CASE=CF00NO0000001arb7
 WORKFLOW_OUTBOUND_MESSAGE_ENDPOINTURL=https://crm-salesforce-dev.mercedes-benz.com/webservices/SuspectedDuplicateNotification
 WORKFLOW_OUTBOUND_MESSAGE_ENDPOINTURL_SEND_CAMPAIGN_ID_EP=https://crm-salesforce-dev.mercedes-benz.com/webservices/CampaignUpdateNotification
 
-SETTING_DEFAULT_CASE_OWNER=arun.iyer.ntt@asia.daimler-apac.com.asiadev2
-SETTING_DEFAULT_CASE_USER=arun.iyer.ntt@asia.daimler-apac.com.asiadev2
+SETTING_DEFAULT_CASE_OWNER=sekhara.vanga.ntt@asia.daimler-apac.com.asiadev2
+SETTING_DEFAULT_CASE_USER=sekhara.vanga.ntt@asia.daimler-apac.com.asiadev2
