--- a/src/main/destructive/destructive.properties
+++ b/src/main/destructive/destructive.properties
@@ -472,3 +472,6 @@ post:CustomField:Vehicle__c.Vehicle_Age__c:AAABUtBTvDw=
 post:CustomField:Campaign.LastRunDate__c:AAABUyJDIr0=
 post:CustomField:Campaign.NextRunDate__c:AAcBuyJDIr1=
 post:CustomField:Retail_Task__c.Contract_Start_Date__c:AAABVMPIzCA=
+post:CustomField:Account.X1st_Hobby__c:AAABVMPIvRT=
+post:CustomField:Account.X2nd_Hobby__c:AAABVMPIvRT=
+post:CustomField:Account.X3rd_Hobby__c:AAABVMPIvRT=
