--- a/src/main/transformations/dev_sb_asia_ci/token.properties
+++ b/src/main/transformations/dev_sb_asia_ci/token.properties
@@ -1,4 +1,4 @@
-WORKFLOW_INTEGRATION_USER=arun.iyer.ntt@asia.daimler-apac.com.ci
+WORKFLOW_INTEGRATION_USER=arun.iyer.ntt@mbj.daimler-apac.com.ci
 
 OBJECT_CAMPAIGN_WEBLINK_CAC_CAMPAIGN_RECORD_TYPE_ID=012p00000004ISQ
 OBJECT_CAMPAIGN_WEBLINK_COMPLEX_EXECUTION_RECORD_TYPE_ID=012p00000004IST
@@ -76,6 +76,6 @@ VEHICLE_RELATIONSHIP_FIELD_ID_IN_CASE=00Np0000000ODbU
 WORKFLOW_OUTBOUND_MESSAGE_ENDPOINTURL=https://crm-salesforce-dev.mercedes-benz.com/webservices/SuspectedDuplicateNotification
 WORKFLOW_OUTBOUND_MESSAGE_ENDPOINTURL_SEND_CAMPAIGN_ID_EP=https://crm-salesforce-int.mercedes-benz.com/webservices/CampaignUpdateNotification
 
-SETTING_DEFAULT_CASE_OWNER=arun.iyer.ntt@asia.daimler-apac.com.ci
-SETTING_DEFAULT_CASE_USER=arun.iyer.ntt@asia.daimler-apac.com.ci
+SETTING_DEFAULT_CASE_OWNER=arun.iyer.ntt@mbj.daimler-apac.com.ci
+SETTING_DEFAULT_CASE_USER=arun.iyer.ntt@mbj.daimler-apac.com.ci
 
