added token properties

--- a/src/main/transformations/dev_sb_asia_dev2/token.properties
+++ b/src/main/transformations/dev_sb_asia_dev2/token.properties
@@ -17,6 +17,9 @@ OBJECT_CASE_VEHICLE_RELATIONSHIP=00Np0000000K9DR
 OBJECT_CASE_VEHICLE_RELATIONSHIP_LKIED=00Np0000000K9DR_lkid
 OBJECT_CASE_Vehicle_ID=00Np0000000K9DN
 OBJECT_CASE_INQUIRY_RECORDTYPEID=012p00000008UZa
+OBJECT_CASE_Assigned_Dealer=CF00Np0000000K903
+OBJECT_CASE_Assigned_Dealer_LKIED=CF00Np0000000K903_lkid
+OBJECT_CASE_SALES_RECORDTYPEID=012p00000008UZO
  
 OBJECT_LEAD_CASE=CF00Np0000000K90G
 OBJECT_lEAD_CASE_LKID=CF00Np0000000K90G_lkid
