--- a/src/main/transformations/dev_sb_au_dev5/token.properties
+++ b/src/main/transformations/dev_sb_au_dev5/token.properties
@@ -51,6 +51,8 @@ VEHICLE_RELATIONSHIP_FIELD_ID_IN_CASE=CF00NO0000001arb7
 OBJECT_ACCOUNT_WEBLINK_COMPANY_FIELD_ID=CF00N55000000NxYK
 OBJECT_ACCOUNT_WEBLINK_COMPANY_FIELD_LKID=CF00N55000000NxYK_lkid
 OBJECT_ACCOUNT_WEBLINK_PERSON_ACCOUNT_RECORDTYPE_ID=0121a000000TtT3
+REPORT_WEBLINK_CONTRACT_WITH_ACCOUNT_REPORT_ID=00Oq0000000KxtP
+REPORT_WEBLINK_CONTRACT_WITH_VEHICLE_REPORT_ID=00Oq0000000H4h8
 
 OBJECT_LEAD_WEBLINK_CONTACT_ID=CF00N55000000NyRW
 OBJECT_LEAD_WEBLINK_COMPANY_ACCOUNT_ID=CF00N55000000NyRS
