Created field in account object and given profile permission

--- a/src/main/destructive/destructive.properties
+++ b/src/main/destructive/destructive.properties
@@ -475,3 +475,4 @@ post:CustomField:Retail_Task__c.Contract_Start_Date__c:AAABVMPIzCA=
 post:CustomField:Account.X1st_Hobby__c:AAABVMPIvRT=
 post:CustomField:Account.X2nd_Hobby__c:AAABVMPIvRT=
 post:CustomField:Account.X3rd_Hobby__c:AAABVMPIvRT=
+post:CustomField:Account.Portal_Apply_Status_c__c:AAABVnhKO4k=
