--- a/src/main/destructive/destructive.properties
+++ b/src/main/destructive/destructive.properties
@@ -476,3 +476,4 @@ post:CustomField:Account.X1st_Hobby__c:AAABVMPIvRT=
 post:CustomField:Account.X2nd_Hobby__c:AAABVMPIvRT=
 post:CustomField:Account.X3rd_Hobby__c:AAABVMPIvRT=
 post:CustomField:Account.Portal_Apply_Status_c__c:AAABVnhKO4k=
+post:CustomField:Vehicle_Relationship__c.SalesType_c__c:AAABUtBTvDz=
