--- a/src/main/destructive/destructive.properties
+++ b/src/main/destructive/destructive.properties
@@ -479,5 +479,5 @@ post:CustomField:Account.Portal_Apply_Status_c__c:AAABVnhKO4k=
 post:CustomField:Vehicle_Relationship__c.SalesType_c__c:AAABUtBTvDz=
 post:Profile:'Central CRM Manager':AAABVnl+H1k=
 post:Profile:'CAC IB TL':AAABVnl+H2k=
-post:Profile:'Central S&M Marketing Manager'::AAABVnl+H1l=
-post:Profile:'CAC Data Manager'::AAABVnl+K1k=
+post:Profile:'Central S&M Marketing Manager':AAABVnl+H1l=
+post:Profile:'CAC Data Manager':AAABVnl+K1k=
