--- a/src/main/destructive/destructive.properties
+++ b/src/main/destructive/destructive.properties
@@ -350,3 +350,4 @@ pre:CustomField:Activity.Product_Offer__c:AAABU8JWjsY=
 pre:CustomField:Activity.Quote_Live__c:AAABU8JWkMk=
 post:CustomField:Retail_Task__c.Contract_Start_Date__c:AAABVMIufzI=
 post:CustomField:Claim__c.Updated_By_EP_Transaction__c:AAABVVQQ1Kg=
+post:CustomField:User.DMS_User_ID__c:AAABVVQQ1Kj=
