--- a/src/main/destructive/destructive.properties
+++ b/src/main/destructive/destructive.properties
@@ -351,3 +351,5 @@ pre:CustomField:Activity.Quote_Live__c:AAABU8JWkMk=
 post:CustomField:Retail_Task__c.Contract_Start_Date__c:AAABVMIufzI=
 post:CustomField:Claim__c.Updated_By_EP_Transaction__c:AAABVVQQ1Kg=
 post:CustomField:User.DMS_User_ID__c:AAABVVQQ1Kj=
+post:CustomField:Vehicle_Relationship__c.Portal_Apply_Flag__c:AAABUtBTvDe=
+post:CustomField:Vehicle_Relationship__c.Warranty_Apply_Flag__c:AAABUtBTvDf=
