--- a/src/main/destructive/destructive.properties
+++ b/src/main/destructive/destructive.properties
@@ -353,3 +353,6 @@ post:CustomField:Claim__c.Updated_By_EP_Transaction__c:AAABVVQQ1Kg=
 post:CustomField:User.DMS_User_ID__c:AAABVVQQ1Kj=
 post:CustomField:Vehicle_Relationship__c.Portal_Apply_Flag__c:AAABUtBTvDe=
 post:CustomField:Vehicle_Relationship__c.Warranty_Apply_Flag__c:AAABUtBTvDf=
+post:CustomField:Vehicle_Relationship__c.Sales_Type__c:AAABUtBTvDo=
+post:CustomField:Account.Customer_Attributes_UpdatedDate__c:AAABUtBTvDy=
+
