--- a/src/main/destructive/destructive.properties
+++ b/src/main/destructive/destructive.properties
@@ -483,3 +483,4 @@ post:Profile:'Central CRM Manager':AAABVnl+H1k=
 post:Profile:'CAC IB TL':AAABVnl+H2k=
 post:Profile:'Central S&M Marketing Manager':AAABVnl+H1l=
 post:Profile:'CAC Data Manager':AAABVnl+K1k=
+post:Profile:'Premier Support User':AAABVnl+K1m=
