Removed field dependeny in VR object

--- a/src/main/destructive/destructive.properties
+++ b/src/main/destructive/destructive.properties
@@ -355,4 +355,5 @@ post:CustomField:Vehicle_Relationship__c.Portal_Apply_Flag__c:AAABUtBTvDe=
 post:CustomField:Vehicle_Relationship__c.Warranty_Apply_Flag__c:AAABUtBTvDf=
 post:CustomField:Vehicle_Relationship__c.Sales_Type__c:AAABUtBTvDo=
 post:CustomField:Account.Customer_Attributes_UpdatedDate__c:AAABUtBTvDy=
+post:CustomField:Lead__c.Customer_Informaiotn__c:AAABUtBTvVZ
 
