--- a/src/main/destructive/destructive.properties
+++ b/src/main/destructive/destructive.properties
@@ -390,6 +390,8 @@ post:ApexTrigger:RecallAfterInsertUpdate:AAABUEJMQQA=
 post:ApexClass:RecallAfterInsertUpdateTriggerHandler:AAABUEJMXE4=
 post:ApexClass:LeadConatctcontroller:AAABUWZ8G9M=
 post:ApexClass:LeadConatctcontrollerTest:AAABUWZ8G9M=
+post:ApexComponent:Brochure_component:AAABVqIii3M=
+post:ApexClass:BrochureLinkController:AAABVqIir0Y=
 post:CustomField:QC__c.PS_Comment_c__c:AAABULdK42U=
 pre:CustomField:Activity.Quote_Live__c:AAABULdK43F=
 pre:CustomField:Activity.Product_Offer__c:00N7A000000QzJ6=
