Deleted field for Vehicle relationship

--- a/src/main/destructive/destructive.properties
+++ b/src/main/destructive/destructive.properties
@@ -140,6 +140,7 @@ post:Layout:Lead__c-Finance Lead Layout to all except Fleet%2Ffleet delete:AAABV
 post:ApexPage:Lead_Address_Vehicle_Layout:AAABVA+tW2F=
 post:ApexPage:Lead_Address_Finance_Fleet_Layout:AAABVA+tX5Z=
 post:CustomField:Case.Case_Sub_Type__c:AAABTNb8szQ=
+post:CustomField:Vehicle_Relationship__c.Warranty_Apply_Status__c:AAABTNb9szQ=
 post:CustomField:Account_Link__c.Type__c:AAABTNcHeg8=
 post:CustomObject:Trigger_Status__c:AAABTNqVqLo=
 post:ApexClass:ScheduleCreateWeeklyRegionOBEmails:AAABTN+Irsg=
