validation rule of car model removal

--- a/src/main/destructive/destructive.properties
+++ b/src/main/destructive/destructive.properties
@@ -303,6 +303,7 @@ post:CustomField:Account.Model_of_Interest__c:AAABTPHHfLQ=
 post:CustomField:Account.Other_Dealerships_contacted__c:AAABTPHHgFg=
 post:CustomObject:Pre_Order__c:AAABTQAOxuY=
 post:ValidationRule:Address__c.CheckedState:AAABTQBpVPM=
+post:ValidationRule:Car_Model__c.Model_Required:AAABTQBpVPN=
 post:CustomField:Address__c.Post_Code__c:AAABTQBpWa8=
 post:CustomField:Address__c.State__c:AAABTQBpXBY=
 post:CustomField:Address__c.Suburb__c:AAABTQBpXo8=
