--- a/build.xml
+++ b/build.xml
@@ -44,7 +44,7 @@
 	
 	<target name="deploy" depends="gitVersion, retrieveChecksums, preDestructiveChanges, deploy01, deploy05, deploy07, deploy09, deploy15, deploy20, deploy21, deploy25,
 	deploy29,deploy30,deploy31,deploy32,deploy33,deploy34,deploy35,deploy36,deploy37,deploy39, deploy40,deploy41, deploy42, deploy43,deploy44,deploy45,deploy49,deploy50,
-	deploy51,deploy52,postDestructiveChanges">
+	deploy51,deploy52,deploy53,postDestructiveChanges">
 		<sf:deployChecksums sfdcName="${sfdc.checksums}" dryRun="${dryrun}" gitVersion="${git.version}"
 				username="${sfdc.username}" password="${sfdc.password}" serverurl="${sfdc.serverurl}" maxPoll="${sfdc.maxPoll}" 
 				useProxy="${sfdc.proxy.use}" proxyHost="${sfdc.proxy.host}" proxyPort="${sfdc.proxy.port}" checksums="${file.checksums.local}"/>
@@ -944,6 +944,13 @@
 		</deploy>
     </target>
 	
+	<target name="deploy53">
+		<deploy runAllTests="${sfdc.runAllTests}">
+			<sf:typeset name="objectTranslations"/>
+			<sf:typeset name="translations"/>
+		</deploy>
+    </target>
+	
 	<!--<target name="deploy53">
 		<deploy runAllTests="${sfdc.runAllTests}">
 			<sf:typeset name="reports"/>
@@ -967,7 +974,7 @@
 	</target>
 	
 	<property name="typesets.circle">
-		CustomLabels,CallCenter,CustomTab,ApexClass,ApexComponent,ApexPage,ApexTrigger,Group,Queue,Document,AccountSharingRules,CustomPageWebLink,Role,ApprovalProcess,PermissionSet,CustomObject,Layout,
+		CustomLabels,CallCenter,CustomTab,ApexClass,ApexComponent,ApexPage,ApexTrigger,Group,Queue,Document,AccountSharingRules,CustomPageWebLink,Role,ApprovalProcess,PermissionSet,CustomObject,Layout,CustomObjectTranslation,Translations,
 		Workflow,CampaignSharingRules,EmailTemplate,CustomApplication,AppMenu,CaseSharingRules,CustomObjectSharingRules,Settings,HomePageComponent,HomePageLayout,RemoteSiteSetting,StaticResource,Profile,Report,ReportType
 	</property>
 	
