Updated destructive file to remove the test queues

--- a/src/main/destructive/destructive.properties
+++ b/src/main/destructive/destructive.properties
@@ -486,3 +486,5 @@ post:Profile:'Central S&M Marketing Manager':AAABVnl+H1l=
 post:Profile:'CAC Data Manager':AAABVnl+K1k=
 post:Profile:'Premier Support User':AAABVnl+K1m=
 post:CustomField:Vehicle_Relationship__c.Used_Warranty_Apply_Status__c:AAABVtswVng=
+post:Queue:test_CAC_Surpervisor:AABBVtswVng
+post:Queue:test_CRM_Approver:AABBVtswVng
