Changes in Token.properties for TEST & UAT

--- a/src/main/transformations/dev_sb_asia_TestKorea/token.properties
+++ b/src/main/transformations/dev_sb_asia_TestKorea/token.properties
@@ -1,6 +1,6 @@
 WORKFLOW_INTEGRATION_USER=arun.iyer.ntt@mbj.daimler-apac.com.testkorea
 
-OBJECT_LEAD_ID=/a13/o
+OBJECT_LEAD_ID=/a13/e
 OBJECT_LEAD_SALES_RECORD_TYPE_ID=012N0000000957x
 OBJECT_LEAD_FIRSTNAME_ID=00NN0000001NLCq
 OBJECT_LEAD_LASTNAME_ID=00NN0000001NLDR
