--- a/src/main/transformations/dev_sb_asia_cikorea/token.properties
+++ b/src/main/transformations/dev_sb_asia_cikorea/token.properties
@@ -6,7 +6,7 @@ OBJECT_CAMPAIGN_WEBLINK_SIMPLE_EXECUTION_RECORD_TYPE_ID=012p00000004ISS
 
 CENTRAL_OFFICE_QUEUE_ID=00Gp0000000Mbrv
 
-OBJECT_LEAD_ID=/a13/o
+OBJECT_LEAD_ID=/a13/e
 OBJECT_LEAD_SALES_RECORD_TYPE_ID=012280000006I7s
 OBJECT_LEAD_FIRSTNAME_ID=00N2800000A9Ck9
 OBJECT_LEAD_LASTNAME_ID=00N2800000A9Ckk
