--- a/src/main/transformations/dev_sb_asia_dev4/token.properties
+++ b/src/main/transformations/dev_sb_asia_dev4/token.properties
@@ -73,7 +73,7 @@ CASE_FIELD_ID_IN_LEAD=00Np0000000ODOJ
 VEHICLE_FIELD_ID_IN_CASE=00Np0000000ODbX
 VEHICLE_RELATIONSHIP_FIELD_ID_IN_CASE=00Np0000000ODbU
 
-OBJECT_LEAD_ID=/a13/o
+OBJECT_LEAD_ID=/a13/e
 OBJECT_LEAD_SALES_RECORD_TYPE_ID=012280000006I7s
 OBJECT_LEAD_FIRSTNAME_ID=00N2800000A9Ck9
 OBJECT_LEAD_LASTNAME_ID=00N2800000A9Ckk
